--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1>PULSE AI</h1>
     <p>Your city. Live. Smart.</p>
     <p>Auto-posts real-time deals, weather, events to Instagram & websites.</p>
-    <a href="https://buy.stripe.com/test_00waEX57Rg15a9haFRb3q00" class="btn">$99 Setup + 7-Day Trial</a>
-    <a href="https://buy.stripe.com/test_3cI00j7fZ16b95d3dpb3q01" class="btn">$49/month</a>
+    <a <a href="https://buy.stripe.com/bJe8wP2Z616dcUX60p87K00" class="btn">$99 Setup + 7-Day Trial</a> class="btn">$99 Setup + 7-Day Trial</a>
+    <a  <a href="https://buy.stripe.com/28EbJ157eeX37AD1K987K01" class="btn">$49/month</a>class="btn">$49/month</a>
     <div class="footer">hello@pulsebot.co</div>
   </div>
 </body>
